--- a/templates/management/footer.html
+++ b/templates/management/footer.html
@@ -1,19 +1,12 @@
-{% load static %}
-<div class="footer-copyright-area">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="footer-copy-right">
-          <p>
-            Copyright &copy;
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            Burundian National Identity Application  |  Designed by
-            <a href="" target="_blank">Mediatrice NIYIMFASHIJE</a>
-          </p>
-        </div>
-      </div>
-    </div>
+<div class="footer-wrap pd-20 mb-20 card-box">
+  <div class="col-md-12 text-center">
+    <p>
+      Copyright &copy;
+      <script>
+        document.write(new Date().getFullYear());
+      </script>
+      Burundian National Identity Application | Designed by
+      <a href="" target="_blank">Mediatrice NIYIMFASHIJE</a>
+    </p>
   </div>
 </div>
