--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -57,10 +57,10 @@
               <a href="{% url 'adm_provinces' %}">Province</a>
             </li>
             <li>
-              <a href="{% url 'adm_services' %}">Commune</a>
+              <a href="{% url 'adm_communes' %}">Commune</a>
             </li>
             <li>
-              <a href="{% url 'adm_services' %}">Colline</a>
+              <a href="{% url 'adm_collines' %}">Colline</a>
             </li>
           </ul>
         </li>
