--- a/templates/management/administrator/commune_details.html
+++ b/templates/management/administrator/commune_details.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Province Details</title>
+    <title>Commune Details</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="title">
-            <h4>Province Details</h4>
+            <h4>Commune Details</h4>
           </div>
           <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb">
@@ -25,10 +25,10 @@
                 <a href="{% url 'adm_dashboard' %}">Dashboard</a>
               </li>
               <li class="breadcrumb-item">
-                <a href="{% url 'adm_provinces' %}">Province List</a>
+                <a href="{% url 'adm_communes' %}">Commune List</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                Province Details
+                Commune Details
               </li>
             </ol>
           </nav>
@@ -39,7 +39,7 @@
     <div class="min-height-200px">
       <div class="card-box mb-30">
         <div class="pd-20">
-          <h4 class="h4">Province Details</h4>
+          <h4 class="h4">Commune Details</h4>
         </div>
         <div class="card-body pb-20">
             <button
@@ -52,22 +52,41 @@
             </button>
             <div class="row">
               <div class="col-lg-12 mb-3">
-                <span class="font-weight-bold">Province Name:</span>
-                <h4 class="title">{{ province.province_name }}</h4>
+                <span class="font-weight-bold">Commune Name:</span>
+                <h4 class="title">{{ commune.commune_name }}</h4>
+              </div>
+              <div class="col-lg-12 mb-3">
+                <span class="font-weight-bold">Province:</span>
+                <h5 class="subtitle">{{ commune.province.province_name }}</h5>
               </div>
               <hr />
-              
               <form action="" method="post" class="col-lg-12 mb-3">
                 {% csrf_token %}
                 <div class="modal-body">
                   <div class="form-group mb-0">
-                    <label class="col-form-label">Province Name</label>
+                    <label class="col-form-label">Province</label>
+                    <select
+                      id="inputStatus"
+                      name="province"
+                      class="form-control custom-select"
+                      required
+                    >
+                      <option disabled>Select Province</option>
+                      {% if provinces %}{% for province in provinces %}
+                      <option value="{{province.id}}" {% if province.province_name == commune.province.province_name %} selected {% endif %} >
+                        {{province.province_name}}
+                      </option>
+                      {% endfor %}{% endif %}
+                    </select>
+                  </div>
+                  <div class="form-group mb-0">
+                    <label class="col-form-label">Commune Name</label>
                     <input
                       type="text"
                       class="form-control"
-                      name="province_name"
-                      placeholder="Province ..."
-                      value="{{ province.province_name }}"
+                      name="commune_name"
+                      placeholder="Commune ..."
+                      value="{{ commune.commune_name }}"
                       required
                     />
                   </div>
@@ -75,7 +94,7 @@
                 <div class="modal-footer">
                   <button
                     type="submit"
-                    name="update_province"
+                    name="update_commune"
                     class="btn btn-success"
                   >
                     <i class="fa fa-save"></i>
@@ -102,7 +121,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="deleteModalTitle">
-              <i class="fa fa-trash text-danger"></i> DELETE PROVINCE
+              <i class="fa fa-trash text-danger"></i> DELETE COMMUNE
             </h5>
             <button
               type="button"
@@ -118,7 +137,7 @@
             <div class="modal-body">
               <h6 align="center">
                 Are you sure you want to delete <br />
-                province "{{province.province_name}}" ?
+                commune "{{commune.commune_name}}" ?
               </h6>
             </div>
             <div class="modal-footer">
@@ -131,7 +150,7 @@
               </button>
               <button
                 type="submit"
-                name="delete_province"
+                name="delete_commune"
                 class="btn btn-danger"
               >
                 Yes, Delete
