--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -69,7 +69,10 @@
           <div class="sidebar-small-cap">Commune Chiefs</div>
         </li>
         <li class="dropdown">
-          <a href="" class="dropdown-toggle no-arrow">
+          <a
+            href="{% url 'adm_communeChiefs' %}"
+            class="dropdown-toggle no-arrow"
+          >
             <span class="micon dw dw-list"></span
             ><span class="mtext">Chiefs</span>
           </a>
