--- a/templates/management/administrator/chiefCommune_list.html
+++ b/templates/management/administrator/chiefCommune_list.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Commune List</title>
+    <title>Commune Chiefs List</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="title">
-            <h4>Commune List</h4>
+            <h4>Commune Chiefs List</h4>
           </div>
           <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb">
@@ -25,7 +25,7 @@
                 <a href="{% url 'adm_dashboard' %}">Dashboard</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                Commune List
+                Commune Chiefs List
               </li>
             </ol>
           </nav>
@@ -35,7 +35,7 @@
     <div class="min-height-200px">
       <div class="card-box mb-30">
         <div class="pd-20">
-          <h4 class="h4">Commune List</h4>
+          <h4 class="h4">Commune Chiefs List</h4>
         </div>
         <div class="card-body pb-20">
           <button
@@ -44,28 +44,51 @@
             data-toggle="modal"
             data-target="#serviceModal"
           >
-            <i class="fa fa-plus"></i>
-            New Commune
+            <i class="fa fa-user-plus"></i>
+            New Chief
           </button>
           <table class="data-table table stripe hover nowrap">
             <thead>
               <tr>
                 <th>#</th>
-                <th class="table-plus datatable-nosort">Commune Name</th>
-                <th>All Collines</th>
-                <th>Province</th>
+                <th class="table-plus datatable-nosort" colspan="2">
+                  Chiefs Name
+                </th>
+                <th>Gender</th>
+                <th>Commune</th>
                 <th class="datatable-nosort">Action</th>
               </tr>
             </thead>
             <tbody>
-              {% for commune in communes %}
+              {% for chief in chiefs %}
               <tr>
                 <td>{{ forloop.counter }}.</td>
-                <td class="table-plus">{{ commune.commune_name }}</td>
-                <td>{{ commune.collines.all.count }}</td>
-                <td>{{ commune.province.province_name }}</td>
                 <td>
-                  <a href="{% url 'adm_communeDetails' commune.id %}">
+                  {% if chief.profilePicture %}
+                  <img
+                    class="profile-user-img img-responsive img-circle"
+                    src="{{chief.profilePicture.url}}"
+                    width="80px"
+                    alt="{{chief.first_name}} image"
+                  />
+                  {% else %}
+                  <img
+                    class="profile-user-img img-responsive img-circle"
+                    src="{% static 'staff/vendors/images/anonymous.png' %}"
+                    width="80px"
+                    alt="{{chief.first_name}} image"
+                  />
+                  {% endif%}
+                </td>
+                <td class="table-plus">
+                  Names: {{chief.first_name}} {{chief.last_name}} <br/ > Email:
+                  {{chief.email}} <br />
+                  Phone: {{chief.phone}}
+                </td>
+                <td>{{chief.gender}}</td>
+                <td>{{chief.commune.commune_name}}</td>
+                <td>
+                  <a href="{% url 'adm_communeChiefDetails' chief.id %}">
                     <i class="dw dw-eye"></i> View
                   </a>
                 </td>
@@ -89,7 +112,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="serviceModalTitle">
-              REGISTER NEW COMMUNE
+              REGISTER NEW COMMUNE CHIEF
             </h5>
             <button
               type="button"
@@ -103,29 +126,90 @@
           <form action="" method="post">
             {% csrf_token %}
             <div class="modal-body">
-              <div class="form-group mb-0">
-                <label class="col-form-label">Province Name</label>
-                <select
-                  id="inputStatus"
-                  name="province"
-                  class="form-control custom-select"
-                  required
-                >
-                  <option selected disabled>Select Province</option>
-                  {% if provinces %}{% for province in provinces %}
-                  <option value="{{province.id}}">{{province.province_name}}</option>
-                  {% endfor %}{% endif %}
-                </select>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="first_name">First Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="first_name"
+                      id="first_name"
+                      placeholder="First Name ..."
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="last_name">Last Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="last_name"
+                      id="last_name"
+                      placeholder="Last Name ..."
+                      required
+                    />
+                  </div>
+                </div>
               </div>
-              <div class="form-group mb-0">
-                <label class="col-form-label">Commune Name</label>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  name="email"
+                  id="email"
+                  placeholder="Email ..."
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone (include country code)</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="commune_name"
-                  placeholder="Commune ..."
-                  required
+                  name="phone"
+                  id="phone"
+                  placeholder="Phone ..."
                 />
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <select
+                      class="form-control"
+                      name="gender"
+                      id="gender"
+                      required
+                    >
+                      <option value="" class="bg-light">Select Gender</option>
+                      <option value="Male">Male</option>
+                      <option value="Female">Female</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="commune">Commune in Charge</label>
+                <select
+                  class="form-control"
+                  name="commune"
+                  id="commune"
+                  required
+                >
+                  <option value="" class="bg-light">
+                    Select Commune in Charge
+                  </option>
+                  {% if communes %}{% for commune in communes %}
+                  <option value="{{commune.id}}">
+                    {{commune.commune_name}}
+                  </option>
+                  {% endfor %}{% endif %}
+                </select>
+              </div>
             </div>
             <div class="modal-footer">
               <button
@@ -135,7 +219,7 @@
               >
                 Close
               </button>
-              <button type="submit" name="new_commune" class="btn btn-success">
+              <button type="submit" name="new_chief" class="btn btn-success">
                 <i class="fa fa-save"></i>
                 Submit
               </button>
