--- a/templates/management/administrator/profile.html
+++ b/templates/management/administrator/profile.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <!-- Breadcomb area End-->
-    
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -146,8 +146,7 @@
                     data-toggle="modal"
                     data-target="#updateAddresModal"
                   >
-                    <i class="ik ik-settings text-primary"></i> Change
-                    Password
+                    <i class="fa fa-settings text-primary"></i> Change Password
                   </button>
                   <h6 class="sub-title">User Credential</h6>
                   <div class="row">
@@ -183,7 +182,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="updateAddresModalTitle">
-                <i class="ik ik-settings text-primary"></i> CHANGE PASSWORD
+                <i class="fa fa-settings text-primary"></i> CHANGE PASSWORD
               </h5>
               <button
                 type="button"
