--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -130,7 +130,10 @@
           <div class="sidebar-small-cap">Publication</div>
         </li>
         <li>
-          <a href="" class="dropdown-toggle no-arrow">
+          <a
+            href="{% url 'adm_publications' %}"
+            class="dropdown-toggle no-arrow"
+          >
             <span class="micon dw dw-list"></span
             ><span class="mtext">Publication</span>
           </a>
