--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -82,7 +82,7 @@
           <div class="sidebar-small-cap">Citizenship</div>
         </li>
         <li class="dropdown">
-          <a href="" class="dropdown-toggle no-arrow">
+          <a href="{% url 'adm_citizens'%}" class="dropdown-toggle no-arrow">
             <span class="micon dw dw-list"></span
             ><span class="mtext">Citizens</span>
           </a>
