--- a/templates/management/footer.html
+++ b/templates/management/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-wrap pd-20 mb-20 card-box bg-success">
+<div class="footer-wrap pd-20 mb-20 card-box bg-light">
   <div class="col-md-12 text-center">
     <p>
       Copyright &copy;
@@ -6,7 +6,7 @@
         document.write(new Date().getFullYear());
       </script>
       Burundian National Identity Application | Designed by
-      <a class="text-light" href="" target="_blank">Mediatrice NIYIMFASHIJE</a>
+      <a class="text-info" href="" target="_blank">Mediatrice NIYIMFASHIJE</a>
     </p>
   </div>
 </div>
