--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -15,7 +15,7 @@
         alt=""
         class="light-logo"
       />
-      <span class="mtext">Administrator</span>
+      <span class="mtext pl-3">BNIA</span>
     </a>
     <div class="close-sidebar" data-toggle="left-sidebar-close">
       <i class="ion-close-round"></i>
