--- a/templates/management/commune/includes/header.html
+++ b/templates/management/commune/includes/header.html
@@ -3,7 +3,7 @@
   <div class="header-left">
     <div class="menu-icon dw dw-menu"></div>
     <div class="container mx-4">
-      <h4>BNIA | Chief Commune: {{request.user.commune.commune_name}}</h4>
+      <h4>Commune: {{request.user.commune.commune_name}}</h4>
     </div>
   </div>
   <div class="header-right">
