--- a/templates/management/commune/nid_applicationList.html
+++ b/templates/management/commune/nid_applicationList.html
@@ -57,6 +57,7 @@
                 <th>Birth Date</th>
                 <th>Resident address</th>
                 <th>Email</th>
+                <th>Status</th>
                 <th>Registered Date</th>
               </tr>
             </thead>
@@ -93,6 +94,7 @@
                 <td>{{data.citizen.birthdate}}</td>
                 <td>{{data.resident_address}}</td>
                 <td>{{data.email}}</td>
+                <td>{{data.status}}</td>
                 <td>{{data.citizen.createdDate}}</td>
               </tr>
               {% endfor %}
