--- a/templates/management/commune/profile.html
+++ b/templates/management/commune/profile.html
@@ -35,7 +35,7 @@
     <div class="min-height-200px">
       <div class="card-box mb-30">
         <div class="pd-20">
-          <h4 class="h4">Publication Details</h4>
+          <h4 class="h4">Chief Commune Profile</h4>
         </div>
         <div class="card-body pb-20">
           <div class="row">
