--- a/templates/management/administrator/includes/header.html
+++ b/templates/management/administrator/includes/header.html
@@ -3,7 +3,7 @@
   <div class="header-left">
     <div class="menu-icon dw dw-menu"></div>
     <div class="container mx-4">
-      <h4>BNIA | National Administrator</h4>
+      <h4>National Administrator</h4>
     </div>
   </div>
   <div class="header-right">
