--- a/templates/management/commune/includes/sidebar.html
+++ b/templates/management/commune/includes/sidebar.html
@@ -15,7 +15,7 @@
         alt=""
         class="light-logo"
       />
-      <span class="mtext">Chief commune</span>
+      <span class="mtext pl-3"> BNIA</span>
     </a>
     <div class="close-sidebar" data-toggle="left-sidebar-close">
       <i class="ion-close-round"></i>
@@ -61,27 +61,13 @@
           <div class="sidebar-small-cap">National Identity Card</div>
         </li>
         <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle">
+          <a
+            href="{% url 'chief_nidApplications_list' %}"
+            class="dropdown-toggle no-arrow"
+          >
             <span class="micon dw dw-list"></span
             ><span class="mtext">NID Card Application</span>
           </a>
-          <ul class="submenu">
-            <li>
-              <a href="{% url 'chief_nidApplications_list' %}">
-                New Application
-              </a>
-            </li>
-            <li>
-              <a href="{% url 'chief_nidApplications_list' %}">
-                Approved Application
-              </a>
-            </li>
-            <li>
-              <a href="{% url 'chief_nidApplications_list' %}">
-                Rejected Application
-              </a>
-            </li>
-          </ul>
         </li>
         <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle">
