--- a/templates/management/administrator/includes/sidebar.html
+++ b/templates/management/administrator/includes/sidebar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="left-side-bar">
+<div class="left-side-bar bg-success">
   <div class="brand-logo">
     <a href="{% url 'adm_dashboard' %}">
       <img
