--- a/templates/management/commune/citizen_list.html
+++ b/templates/management/commune/citizen_list.html
@@ -22,7 +22,7 @@
           <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'adm_dashboard' %}">Dashboard</a>
+                <a href="{% url 'chief_dashboard' %}">Dashboard</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
                 Citizens List
